add toggle button and some styling adjustments

--- a/src/index.scss
+++ b/src/index.scss
@@ -42,6 +42,11 @@ h4 {
   line-height: 20px;
 }
 
+.h4-bold {
+  font: bold 13px "Space Mono", monospace;
+  line-height: 20px;
+}
+
 button {
   font: bold 16px "Space Mono", monospace;
   line-height: 24px;
