--- a/src/components/ResultCard.scss
+++ b/src/components/ResultCard.scss
@@ -13,6 +13,15 @@
 .result-card-content-container {
   display: grid;
   grid-template-columns: 1fr 4fr;
+  grid-column-gap: 37px;
+}
+
+.result-card-avatar {
+  img {
+    width: 117px;
+    height: 117px;
+    border-radius: 50%;
+  }
 }
 
 .result-card-title-container {
