--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,5 +1,18 @@
 @import "../index.scss";
 
+.background {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: -1;
+
+  @include theme() {
+    background-color: theme-get("background");
+  }
+}
+
 .app-title-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -13,6 +26,10 @@
 
   h4 {
     text-align: right;
+  }
+
+  @include theme() {
+    background-color: theme-get("background");
   }
 }
 
