--- a/src/components/SearchBar.scss
+++ b/src/components/SearchBar.scss
@@ -1,15 +1,17 @@
 @import "../index.scss";
 
 .search-input {
+  @include theme() {
+    background-color: theme-get("background-light");
+    box-shadow: theme-get("box-shadow");
+  }
+
   margin: auto;
 
   width: 708px;
   height: 47px;
   padding: 22px;
   border-radius: 15px;
-  box-shadow: 0px 16px 30px $shadow;
-
-  background: $background-light;
 
   display: grid;
   align-items: center;
@@ -23,6 +25,11 @@
 
   input {
     border: 0;
+
+    @include theme() {
+      background-color: theme-get("background-light");
+      color: theme-get("font-color");
+    }
   }
 
   input:focus {
@@ -39,12 +46,17 @@
     height: 50px;
     border: 0;
     border-radius: 10px;
-    background-color: $primary;
-    color: $background-light;
+
+    @include theme() {
+      background-color: theme-get("primary");
+      color: theme-get("white");
+    }
   }
 
   button:hover {
     cursor: pointer;
-    background-color: $primary-light;
+    @include theme() {
+      background-color: theme-get("primary-light");
+    }
   }
 }
