--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,5 +1,15 @@
 @import "../index.scss";
 
+#root {
+  width: 730px;
+  margin: auto;
+
+  @media only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 1) {
+    width: auto;
+    margin: 0 24px;
+  }
+}
+
 .background {
   position: fixed;
   top: 0;
@@ -17,8 +27,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
-  margin: auto;
-  width: 730px;
+  width: 100%;
 
   h1 {
     text-align: left;
@@ -30,6 +39,11 @@
 
   @include theme() {
     background-color: theme-get("background");
+  }
+
+  @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+    margin: 140px 98px 36px 98px;
+    width: auto;
   }
 }
 
