--- a/src/components/SearchBar.scss
+++ b/src/components/SearchBar.scss
@@ -1,6 +1,6 @@
 @import "../index.scss";
 
-.search-input {
+.search-input-container {
   @include theme() {
     background-color: theme-get("background-light");
     box-shadow: theme-get("box-shadow");
@@ -27,6 +27,7 @@
 
   input {
     border: 0;
+    flex: 1;
 
     @include theme() {
       background-color: theme-get("background-light");
@@ -34,8 +35,28 @@
     }
   }
 
-  input::placeholder {
-    font-size: 13px;
+  .search-input {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+  }
+
+  .search-input-no-results {
+    font-weight: bold;
+    @include theme() {
+      color: theme-get("red");
+    }
+  }
+
+  input[type="text"] {
+    font: 18px "Space Mono", monospace;
+    line-height: 25px;
+
+    @media only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 1) {
+      font: 13px "Space Mono", monospace;
+      line-height: 25px;
+    }
   }
 
   input:focus {
@@ -45,6 +66,11 @@
   input::placeholder {
     font: 18px "Space Mono", monospace;
     line-height: 25px;
+
+    @media only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 1) {
+      font: 13px "Space Mono", monospace;
+      line-height: 25px;
+    }
   }
 
   button {
