--- a/src/index.scss
+++ b/src/index.scss
@@ -3,23 +3,29 @@ $themes: (
     "primary": #0079ff,
     "primary-light": #60abff,
     "secondary": #697c9a,
+    "secondary-dark-mode": #ffffff,
     "tertiary": #4b6a9b,
+    "tertiary-dark-mode": #ffffff,
     "background": #141d2f,
     "background-light": #1e2a47,
     "font-color": #ffffff,
     "box-shadow": unset,
-    "white": #ffffff
+    "white": #ffffff,
+    "red": #F74646
   ),
   light: (
     "primary": #0079ff,
     "primary-light": #60abff,
     "secondary": #697c9a,
+    "secondary-dark-mode": #697c9a,
     "tertiary": #4b6a9b,
+    "tertiary-dark-mode": #4b6a9b,
     "background": #f6f8ff,
     "background-light": #fefefe,
     "font-color": #222731,
     "box-shadow": 0px 16px 30px #4660bb33,
-    "white": #ffffff
+    "white": #ffffff,
+    "red": #F74646
   ),
 );
 
@@ -99,6 +105,12 @@ button {
 .tertiary {
   @include theme() {
     color: theme-get("tertiary");
+  }
+}
+
+.tertiary-dark-mode {
+  @include theme() {
+    color: theme-get("tertiary-dark-mode");
   }
 }
 
