--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@ $themes: (
     "font-color": #ffffff,
     "box-shadow": unset,
     "white": #ffffff,
-    "red": #F74646
+    "red": #f74646,
   ),
   light: (
     "primary": #0079ff,
@@ -25,7 +25,7 @@ $themes: (
     "font-color": #222731,
     "box-shadow": 0px 16px 30px #4660bb33,
     "white": #ffffff,
-    "red": #F74646
+    "red": #f74646,
   ),
 );
 
@@ -53,6 +53,10 @@ h1 {
   @include theme() {
     color: theme-get("font-color");
   }
+
+  @media only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 1) {
+    font-size: 16px;
+  }
 }
 
 h2 {
@@ -61,6 +65,10 @@ h2 {
 
   @include theme() {
     color: theme-get("font-color");
+  }
+
+  @media only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 1) {
+    font-size: 16px;
   }
 }
 
@@ -71,6 +79,10 @@ h3 {
   @include theme() {
     color: theme-get("font-color");
   }
+
+  @media only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 1) {
+    font-size: 13px;
+  }
 }
 
 h4 {
@@ -79,6 +91,10 @@ h4 {
 
   @include theme() {
     color: theme-get("font-color");
+  }
+
+  @media only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 1) {
+    font-size: 11px;
   }
 }
 
@@ -91,9 +107,34 @@ h4 {
   }
 }
 
+p {
+  font: 15px "Space Mono", monospace;
+  line-height: 22px;
+
+  @media only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 1) {
+    font-size: 13px;
+    line-height: 20px;
+  }
+}
+
+span {
+  font: 15px "Space Mono", monospace;
+  line-height: 22px;
+
+  @media only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 1) {
+    font-size: 13px;
+    line-height: 20px;
+  }
+}
+
 button {
   font: bold 16px "Space Mono", monospace;
   line-height: 24px;
+
+  @media only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 1) {
+    font-size: 13px;
+    line-height: 20px;
+  }
 }
 
 .primary {
