--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -4,7 +4,7 @@
   width: 730px;
   margin: auto;
 
-  @media only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 1) {
+  @include phone {
     width: auto;
     margin: 0 24px;
   }
@@ -41,10 +41,8 @@
     background-color: theme-get("background");
   }
 
-  @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  @include tablet {
     margin: 140px 98px 36px 98px;
     width: auto;
   }
 }
-
-
