--- a/src/components/ResultCard/UserInfo/UserInfo.scss
+++ b/src/components/ResultCard/UserInfo/UserInfo.scss
@@ -7,7 +7,7 @@
   text-align: left;
   row-gap: 10px;
 
-  @media only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 1) {
+  @include phone {
     grid-template-columns: 1fr;
     row-gap: 16px;
   }
@@ -25,7 +25,7 @@
     display: grid;
     grid-row-gap: 19px;
 
-    @media only screen and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+    @include desktop {
       grid-row-gap: 16px;
     }
   }
