--- a/src/components/ResultCard/UserInfoGithub/UserInfoGithub.scss
+++ b/src/components/ResultCard/UserInfoGithub/UserInfoGithub.scss
@@ -7,7 +7,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   padding: 15px 32px;
 
-  @media only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 1) {
+  @include phone {
     padding: 14px;
   }
 
